security/intra-mesh/2-ap-allow-ingress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: productpage
 namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
    - source:
        namespaces:
        - istio-system
    to:
    - operation:
        methods:
        - HEAD
        - GET
        paths:
        - "/productpage"
    - operation:
        methods:
        - POST
        - GET
        paths:
        - "/login"
        - "/logout"
