security/intra-mesh/3-ap-ratings.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: ratings-viewer
 namespace: bookinfo
spec:
 selector:
   matchLabels:
     app: ratings
 action: ALLOW
 rules:
 - from:
   - source:
       principals:
       - cluster.local/ns/bookinfo/sa/bookinfo-reviews
   to:
   - operation:
       methods:
       - GET
